# GHFS

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  NEWS  README.md  configure.ac
po/: CMakeLists.txt  hello.pot
po/fr/: hello.po
po/zh_CN/: hello.po
src/: CMakeLists.txt  Makefile.am  hello.cc  hello.h  main.cc  voice.cc  voice.hpp
